--- a/local_llama/templates/index.html
+++ b/local_llama/templates/index.html
@@ -12,12 +12,19 @@
         <h1>Ollama</h1>
         <p>Ask me anything!</p> 
 
-        <form action="/search" method="POST">
             <input type="text" id="text"  placeholder="Enter your question">
-            <button type="submit" id="btn">Ask!</button>
-        </form>
+            <div class="btn_list">
+            <button type="button" id="btn_1">Ask!</button>
+            <button type="button" id="btn_2">Ask!(Stream Version using <a link="https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket">Ws</a>)</button>
+            <button type="button" id="btn_3">Ask!(Stream Version using <a link="https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events/Using_server-sent_events">SSE</a>)</button>
+            </div>
 
         <div class="textBox" id="textBox">
+        </div>
+        <div popover id="my-popover">
+            <div class="popover-content">
+                say SOMETHING!
+            </div>
         </div>
     </div>
     
